Fix for bug 68331 (Moving caret in TEXTAREA to start of line can cause page to scroll horizontally)

- Modified GetSelectionRegionRectAndScrollableView() to clip
  aRect so that it is completely within the bounds of the
  scrolledView. This insures that other scrolled views in
  the parent hierarchy will not scroll more than they have to.

r=brade@netscape.com  sr=sfraser@netscape.com